<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/splash_background"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="10dp"
        android:text="@string/swapi_planets"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/soundButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="end|top"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/sound" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/planetRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="120dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_gif"
        android:gravity="center"
        android:padding="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/previousBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/button_status_color"
            android:padding="10dp"
            android:text="@string/previous_page"
            android:textColor="@color/white"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_status_color"
            android:padding="10dp"
            android:text="@string/next_page"
            android:textColor="@color/white"
            app:cornerRadius="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_gif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_gif"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/loading" />

    </LinearLayout>


</FrameLayout>